fix: rm extra padding for the nav floor

--- a/src/blocks/Footer/components/NavigationFloor/NavigationFloor.scss
+++ b/src/blocks/Footer/components/NavigationFloor/NavigationFloor.scss
@@ -11,11 +11,7 @@ $block: '.#{$ns}footer-block';
     }
 
     &__columns-container {
-        padding-right: 0;
-    }
-
-    &__floor_logo-placement_top &__columns-container {
-        padding-left: 0;
+        padding: 0;
     }
 
     &__floor_logo-placement_left &__logo-col.col {
